# gha-swift-env

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md  SwiftWindows.ps1  action.yml  swift-linux.sh  swift-macos.sh
.github/workflows/: ci.yml
Sources/: CMakeLists.txt
Sources/GHASwiftEnv/: CMakeLists.txt  GHASwiftEnv.swift
Tests/GHASwiftEnvTests/: GHASwiftEnvTests.swift
cmake/modules/: CMakeLists.txt  GHASwiftEnvConfig.cmake.in
scripts/: cmake-script.sh
